--- a/SoftwareEngineering-project/SoftwareEngineering-project.csproj
+++ b/SoftwareEngineering-project/SoftwareEngineering-project.csproj
@@ -58,7 +58,9 @@
     <Compile Include="CreateGame.Designer.cs">
       <DependentUpon>CreateGame.cs</DependentUpon>
     </Compile>
+    <Compile Include="Goal.cs" />
     <Compile Include="MyGlobals.cs" />
+    <Compile Include="Piece.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
